# hypixel-screentime

./: Cargo.toml  README.md
src/: config.rs  discord.rs  lib.rs  main.rs  mermaid.rs  storage.rs  tasks.rs  web.rs
