[package]
name = "hypixel-screentime"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "1"
reqwest = { version = "*", features = [ "json" ]}
tokio = { version = "1", features = [ "tokio-macros", "rt-multi-thread", "signal" ] }
chrono = "*"
serenity = "*"
